[tool.ruff]
line-length = 111
indent-width = 4
target-version = "py311"

[tool.poetry]
name = "meow"
version = "0.0.1"
authors = []
description = "CLI tool for LLMs"
classifiers = ["Private :: Do Not upload"]

[tool.poetry.scripts]
meow = "meow:cli"

[tool.poetry.dependencies]
python = "^3.11.0"
rich = "^13.7.1"
prompt-toolkit = "^3.0.43"
ruff = "^0.3.7"
click = "^8.1.7"
attrs = "^23.2.0"
tiktoken = "^0.6.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.3"
openai = "^1.20.0"
requests = "^2.31.0"
pyperclip = "^1.8.2"
keyring = "^25.1.0"
oauth2-client = "^1.4.2"
